Refs #144718 - Fix Show filters button spacing in dimmer.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -90,7 +90,7 @@ div.ui.dimmer.facet-dimmer {
   }
 
   button.show-filters {
-    margin-top: 1em;
+    margin-top: 30px;
     margin-right: 0px;
     background: @sf-light-gray !important;
     border-radius: 2px;
